# language_playground

./: .gitignore  Cargo.toml  README.md  main  main.ll  out.rs  output.bc  output.ll
lang_compiler/: Cargo.toml
lang_compiler/src/: main.rs
lang_core/: Cargo.toml
lang_core/src/: ast.rs  error.rs  lib.rs  token.rs
lang_lsp/: language-configuration.json  rust.json  tsconfig.json  webpack.config.js
lang_lsp/client/src/: extension.ts
lang_lsp/lsp_server/: Cargo.toml
lang_lsp/lsp_server/src/: main.rs
lang_lsp/syntaxes/: xlang.tmLanguage.json
lang_util/: Cargo.toml
lang_util/src/: format.rs  lib.rs  refs.rs
lang_vm/: Cargo.toml
lang_vm/src/: const_value.rs  error.rs  evaluator.rs  lib.rs  pass.rs  scope.rs  stdlib.rs
notes/: infer.txt  notes.txt
test_files/: another.xl  llvm_test.xl  main.c  test.xl  test1.xl
tl_codegen/: Cargo.toml  build.rs
tl_codegen/src/: lib.rs  llvm_type.rs  llvm_value.rs
tl_codegen/src/eval/: mod.rs
tl_codegen/src/evaluator/: expression.rs  mod.rs  statement.rs  types.rs
tl_codegen_llvm/: Cargo.toml
tl_codegen_llvm/src/: code_type.rs  const_eval.rs  lib.rs  lower.rs  module.rs  resolve.rs  symbol.rs
tl_compiler/: Cargo.toml
tl_compiler/src/: main.rs
tl_core/: Cargo.toml
tl_core/src/: ast.rs  lexer.rs  lib.rs  parse_expression.rs  parse_types.rs  parser.rs  token.rs
tl_evaluator/: Cargo.toml
tl_evaluator/src/: error.rs  evaluation_type.rs  evaluation_value.rs  lib.rs  pass.rs  scope.rs
tl_evaluator/src/evaluator/: expression.rs  mod.rs  statement.rs  types.rs
tl_evaluator/src/scope/: intrinsics.rs  mod.rs  scope.rs  scope_manager.rs
tl_lsp/: CHANGELOG.md  README.md  package-lock.json  package.json  vsc-extension-quickstart.md
tl_lsp/client/: tsconfig.json
tl_lsp/lsp_server/: Cargo.toml
tl_lsp/lsp_server/src/: completion.rs  main.rs  semantic_tokens.rs
tl_lsp/syntaxes/: lang.tmLanguage.json  xlang.tmLanguage.json
tl_macro/: Cargo.toml
tl_macro/src/: lib.rs
tl_util/: Cargo.toml
tl_util/src/: format.rs  lib.rs  refs.rs
tl_vm/: Cargo.toml
tl_vm/src/: const_value.rs  error.rs  eval_impl.rs  evaluator.rs  intrinsics.rs  lib.rs  pass.rs  scope.rs  stdlib.rs  vm_type.rs  vm_value.rs
