[package]
name = "tl_codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tl_core = { path = "../tl_core" }
# tl_vm = { path = "../tl_vm" }
tl_evaluator = { path = "../tl_evaluator" }
tl_util = { path = "../tl_util" }

inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm15-0"] }
linked-hash-map = "0.5.6"
once_cell = "1.17.1"
