[package]
name = "tl_codegen_llvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tl_core = { path = "../tl_core" }
tl_util = { path = "../tl_util" }

colored = "2.0.0"

# inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm15-0"] }
inkwell = { path = "../../inkwell", features = ["llvm15-0-force-dynamic"]}
