[package]
name = "tl_evaluator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
handlebars = "4.3.6"
linked-hash-map = "0.5.6"
tl_core = { path = "../tl_core" }
tl_util = { path = "../tl_util" }