[package]
name = "lsp_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lang_core = { path = "../../lang_core" }
lang_util = { path = "../../lang_util" }
lang_vm = { path = "../../lang_vm" }

tokio = { version = "1.24.2", features = ["full"] }
serde = "*"
serde_json = "*"
tower-lsp = "0.18.0"
log = "*"