[package]
name = "lsp_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tl_core = { path = "../../tl_core" }
tl_util = { path = "../../tl_util" }
tl_vm = { path = "../../tl_vm" }
tl_evaluator = { path = "../../tl_evaluator" }

tokio = { version = "1.24.2", features = ["full"] }
serde = "*"
serde_json = "*"
tower-lsp = "0.18.0"
log = "*"